shortening empty sets and lists