@@ -21,7 +21,7 @@ public class CancelCategorizer implements RelatedActionsAwareCategorizer {
 
     @Override
     public Set<String> getCategories(List<BetAction> actions, Market market) {
-        if (actions.isEmpty()) return Collections.emptySet();
+        if (actions.isEmpty()) return Set.of();
         LinkedList<BetActionType> types = actions.stream().map(BetAction::getBetActionType)
                 .collect(Collectors.toCollection(LinkedList::new));
         if (types.getFirst() == BetActionType.PLACE) {
