@@ -7,7 +7,6 @@ import cz.fb.manaus.core.model.PriceComparator;
 import cz.fb.manaus.core.model.Side;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -33,9 +32,9 @@ public abstract class AbstractPriceFilter {
         Map<Side, List<Price>> bySide = prices.stream().filter(this::priceRangeFilter)
                 .collect(Collectors.groupingBy(Price::getSide));
         List<Price> sortedBack = PriceComparator.ORDERING.immutableSortedCopy(
-                bySide.getOrDefault(Side.BACK, Collections.emptyList()));
+                bySide.getOrDefault(Side.BACK, List.of()));
         List<Price> sortedLay = PriceComparator.ORDERING.immutableSortedCopy(
-                bySide.getOrDefault(Side.LAY, Collections.emptyList()));
+                bySide.getOrDefault(Side.LAY, List.of()));
         List<Price> bulldozedBack = bulldozer.bulldoze(bulldozeThreshold, sortedBack);
         List<Price> bulldozedLay = bulldozer.bulldoze(bulldozeThreshold, sortedLay);
         Stream<Price> topBack = bulldozedBack.stream().limit(minCount);
